traces/bug_371.txt
examples++-load/Element_QF.cpp:329: error: STATIC_INITIALIZATION_ORDER_FIASCO
  Initializer of callDoLoadInit accesses global variable from a different translation unit: std::cout|.
Showing all 4 steps of the trace


examples++-load/Element_QF.cpp:329:1: initialization of callDoLoadInit
327.   }
328.   
329. > LOADFUNC(finit);  //  une variable globale qui serat construite  au chargement dynamique
330.   
331.   // --- fin -- 

examples++-load/Element_QF.cpp:329:1: call to DoLoadInit
327.   }
328.   
329. > LOADFUNC(finit);  //  une variable globale qui serat construite  au chargement dynamique
330.   
331.   // --- fin -- 

examples++-load/Element_QF.cpp:329:1: call to addInitFunct
  327.   }
  328.   
  329. > LOADFUNC(finit);  //  une variable globale qui serat construite  au chargement dynamique
  330.   
  331.   // --- fin -- 

src/fflib/InitFunct.cpp:80:23: access to std::cout|
  78.        ){ 
  79.       getInitFunctlist()->push_back(make_pair(i,f));
  80.       if(verbosity>9)   cout << " -- addInitFunct: " << i << " " << f 
                              ^
  81.   			   << " " <<  (name ? name : "" ) <<endl; 
  82.     }
